<resources>
    <string name="app_name">Video Call</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="or_sign_up_from_here">Or Sign Up From Here</string>
    <string name="sign_up">Sign Up</string>
    <string name="profile">Profile</string>
    <string name="create_room">Create Room</string>
    <string name="join_room">Join Room</string>
    <string name="create_room_desc">Create a room for video call</string>
    <string name="join_room_desc">Join a video call</string>
    <string name="full_name">Full Name</string>
    <string name="manage_rooms">Manage Rooms</string>
    <string name="welcome_user">Welcome %s</string>
    <string name="recent_meetings">Recent Meetings</string>
</resources>